--- a/main.html
+++ b/main.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OTP Verification</title>
+    <style>
+        .code-container { display: flex; gap: 10px; }
+        .code { width: 40px; height: 40px; text-align: center; font-size: 18px; }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h1 id="verification_heading">Verify Your Account</h1>
+    <p id="verification_subtext">Please enter the 6-digit code sent to your email or phone.</p>
 
+    <div class="code-container">
+        <input type="text" maxlength="1" class="code" />
+        <input type="text" maxlength="1" class="code" />
+        <input type="text" maxlength="1" class="code" />
+        <input type="text" maxlength="1" class="code" />
+        <input type="text" maxlength="1" class="code" />
+        <input type="text" maxlength="1" class="code" />
+    </div>
 </body>
-
 </html>
